syntax = "proto3";

package TransformProto;

message VECTOR2 {
    float X = 1;
    float Y = 2;
}

message VECTOR3 {
    float X = 1;
    float Y = 2;
    float Z = 3;
}

message QUATERNION {
    float X = 1;
    float Y = 2;
    float Z = 3;
    float W = 4;
}

message LOCALTRANSFORM {
    VECTOR3 LocalPosition = 1;
    QUATERNION LocalRotation = 2;
}

message LOCALTRANSFORMSCALE {
    VECTOR3 LocalPosition = 1;
    QUATERNION LocalRotation = 2;
    VECTOR3 LocalScale = 3;
}